# RestCore

./: .coveragerc  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  Makefile  README.md  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
docs/: api.rst  cogs.rst  conf.py  extensions.rst  index.rst  intro.rst  quickstart.rst  services.rst
setup/: requirements.txt  setup.sh
src/roamrs/: __init_.py  __init__.py  auth.py  cog.py  common.py  context.py  extensions.py  httpserver.py  pyjwt.py  services.py
tests/unit/: test_cog.py  test_jwt.py
