[metadata]
name = roamrs
version = 0.1.0
description = A quick builder for a REST-api server
long_description = file: README.md
license = GPLv3

[options]
package_dir=
    =src
packages=find:
install_requires=
    aiohttp
    neomodel
    uvloop
    PyNaCl
    PyJWT[crypto]

[options.packages.find]
where=src
